--- a/config/database.yml
+++ b/config/database.yml
@@ -17,13 +17,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: blog_webfaction
+  password: <%= ENV['BLOG_WEBFACTION_DATABASE_PASSWORD'] %>
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: personal-site_development
+  database: blog_webfaction_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: personal-site_test
+  database: blog_webfaction_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +82,4 @@ test:
 #
 production:
   <<: *default
-  database: personal-site_production
-  username: personal-site
-  password: <%= ENV['PERSONAL-SITE_DATABASE_PASSWORD'] %>
+  database: blog_webfaction_production
