--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: blog_webfaction
-  password: <%= ENV['BLOG_WEBFACTION_DATABASE_PASSWORD'] %>
+  # username: blog_webfaction
+  # password: <%= ENV['BLOG_WEBFACTION_DATABASE_PASSWORD'] %>
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
